# EggsBot

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: deploy.yml
src/: main.rs
src/commands/: chat.rs  llama.rs  mihoyo.rs  mod.rs
